--- a/arch.css
+++ b/arch.css
@@ -1,3 +1,6 @@
+body{
+    margin: 0px;
+}
 .block-logo-inner {
     box-sizing: border-box;
     display: block;
@@ -167,6 +170,9 @@ span.link-item {
 .social-icons{
     display: flex;
     margin:  5px 10px 0;
+    font-weight: 400;
+}
+img.social-icons{
     height: 25px;
     width: 25px;
 }
