--- a/arch.css
+++ b/arch.css
@@ -5,7 +5,7 @@ body{
     box-sizing: border-box;
     display: block;
     font-size: 16px;
-    font-weight: 400;
+    font-weight: normal;
     max-width: 1200px;
     padding: 30px 40px;
     position: relative;
@@ -15,7 +15,7 @@ body{
     box-sizing: border-box;
     display: flex;
     font-size: 16px;
-    font-weight: 400;
+    font-weight: normal;
     flex-direction: row;
     padding: 0 -15px;
     justify-content: space-between;
@@ -77,7 +77,7 @@ span.red-dot {
     display: flex;
     flex-wrap: wrap;
     font-size: 16px;
-    font-weight: 400;
+    font-weight: normal;
     justify-content: center;
     margin: -5px -10px 0;
 
@@ -155,7 +155,7 @@ span.link-item {
 .sec-right-logo {
     box-sizing: border-box;
     display: flex;
-    font-weight: 400;
+    font-weight: normal;
     margin: 0 15px;
 }
 
@@ -170,7 +170,7 @@ span.link-item {
 .social-icons{
     display: flex;
     margin:  5px 10px 0;
-    font-weight: 400;
+    font-weight: normal;
 }
 img.social-icons{
     height: 25px;
