--- a/banner-after-menu.css
+++ b/banner-after-menu.css
@@ -5,7 +5,10 @@
     font-size: 17px;
     font-weight: 300;
     padding: 250px 0;
-    background-image: url("//res2.weblium.site/res/5dcebb6eb2b1b00022337fd8/5dd28d0a4208ed00223e2b67_optimized_1920.webp"); 
+    /* background-position: 0 0;
+    background-repeat: no-repeat;
+    background-size: 100% auto; */
+    background-image: url("//res2.weblium.site/res/5dcebb6eb2b1b00022337fd8/5dd28d0a4208ed00223e2b67_optimized_1920.webp");
     /* linear-gradient( top,rgba(0, 0, 0,0.5), rgba(0, 0, 0, 0.5)) */
 }
 
@@ -79,7 +82,7 @@ span.info-text-subtitle {
     font-weight: normal;
     font-size: 19px;
     text-align: left;
-    line-height:28.5px;
+    line-height: 28.5px;
 }
 
 .grid-empty {
