--- a/who-we-are.css
+++ b/who-we-are.css
@@ -25,6 +25,14 @@
     justify-content: center;
 }
 
+@media (max-width: 990px) {
+    .box-who {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+}
+
 .box-who-inner {
     display: flex;
     flex-wrap: wrap;
@@ -44,21 +52,70 @@
     flex-basis: 100%;
     flex-direction: column;
     justify-content: flex-start;
-    max-width: 100%;
     text-align: left;
 }
 
 .picture-who {
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
+
     box-sizing: border-box;
     display: block;
     text-align: left;
 }
 
-.inner-pic-who img {
-object-fit: cover;
-background-color: transparent;
+img.inner-pic-who  {
+    box-sizing: border-box;
+    height: auto;
+    width: auto;
+
+    /* display: block; */
+    background-color: transparent;
+}
+
+.item-who-middle {
+    box-sizing: border-box;
+    display: flex;
+    flex-basis: 100%;
+    padding: 0 15px;
+}
+
+@media (max-width: 767px) {
+    .item-who-middle {
+        margin-top: 50px;
+    }
+}
+
+.box-who-middle {
+    display: flex;
+    flex-basis: 100%;
+    flex-direction: column;
+    justify-content: center;
+    max-width: 100%;
+    text-align: left;
+    padding: 0 20px;
+}
+
+p.before-sub {
+    display: block;
+    text-align: left;
+    position: relative;
+}
+span.box-before-sub{
+    display: block;
+    font-family: "Public Sans", sans-serif;
+    font-size: 19px;
+    letter-spacing: normal;
+    line-height: 28.5px;
+    font-weight: 400;
+    text-align: left;
+}
+
+span.just-text{
+    color: #000;
+    display: block;
+    font-family: "Public Sans", sans-serif;
+    font-size: 19px;
+    letter-spacing: normal;
+    line-height: 28.5px;
+    font-weight: 400;
+    text-align: left;
 }
