--- a/who-we-are.css
+++ b/who-we-are.css
@@ -4,7 +4,8 @@
     padding: 90px 0 50px;
     height: auto; */
     display: block;
-    padding: 90px 0 50px;;
+    padding: 90px 0 50px;
+    ;
     justify-content: center;
 }
 
@@ -63,8 +64,9 @@
     display: block;
     text-align: left;
 }
-.pic-who{
-    display:block;
+
+.pic-who {
+    display: block;
     max-width: 100%;
     position: relative;
     text-align: left;
@@ -78,17 +80,7 @@ img.inner-pic-who {
     background-color: transparent;
 }
 
-.item-who-middle {
-    box-sizing: border-box;
-    display: flex;
-    flex-basis: 100%;
-    padding: 0 15px;
-}
-
 @media (max-width: 767px) {
-    .item-who-middle {
-        margin-top: 50px;
-    }
     img.inner-pic-who {
         box-sizing: border-box;
         height: 550px;
@@ -108,6 +100,20 @@ img.inner-pic-who {
     }
 }
 
+.item-who-middle {
+    box-sizing: border-box;
+    display: flex;
+    flex-basis: 100%;
+    padding: 0 15px;
+}
+
+@media (max-width: 767px) {
+    .item-who-middle {
+        margin-top: 50px;
+    }
+
+}
+
 .box-who-middle {
     display: flex;
     flex-basis: 100%;
@@ -123,7 +129,14 @@ p.before-sub {
     text-align: left;
     position: relative;
 }
-span.box-before-sub{
+
+span.box-before-sub {
+    display: block;
+
+}
+
+span.just-text {
+    color: #000;
     display: block;
     font-family: "Public Sans", sans-serif;
     font-size: 19px;
@@ -133,13 +146,41 @@ span.box-before-sub{
     text-align: left;
 }
 
-span.just-text{
-    color: #000;
+p.title-who{
+    display: block;
+    position: relative;
+}
+
+span.box-title-who{
+    display: block;
+}
+
+span.text-title-who{
+    color:#000;
     display: block;
     font-family: "Public Sans", sans-serif;
-    font-size: 19px;
+    font-size: 38px;
     letter-spacing: normal;
-    line-height: 28.5px;
-    font-weight: 400;
+    line-height: 49.4px;
+    font-weight: 600;
+    text-align: left;
+}
+
+p.subtitle-who{
+    display: block;
+    position: relative;
+}
+span.box-subtitle-who{
+    display: block;
+}
+
+span.text-subtitle-who{
+    color:#000;
+    display: block;
+    font-family: "Public Sans", sans-serif;
+    font-size: 17px;
+    letter-spacing: normal;
+    line-height: 30.6px;
+    font-weight: 300;
     text-align: left;
 }
