add button tr-red-but

--- a/who-we-are.css
+++ b/who-we-are.css
@@ -186,7 +186,7 @@ span.text-subtitle-who {
     text-align: left;
 }
 
-.tr-white-but {
+.tr-red-but {
     background-color: transparent;
     color: #e93314;
     border: 2px solid #e93314;
