--- a/index.css
+++ b/index.css
@@ -39,7 +39,7 @@ nav.navbar navbar-expand-lg navbar-light bg-light {
     justify-content: flex-start;
 }
 
-.text-style-header{
+/* .text-style-header{
     display: block;
     font-size: 15px;
     font-weight: 500;
@@ -83,7 +83,7 @@ li.icon-menu{
 img.social-icons {
     height: 25px;
     width: 25px;
-}
+} */
 
 /* 
 .line-after-red::after {
