--- a/section-after-banner.css
+++ b/section-after-banner.css
@@ -119,7 +119,7 @@ span.text-title-2 {
     color: #000;
 }
 
-.box-red-line {
+/* .box-red-line {
     display: flex;
     font-size: 17px;
     justify-content: flex-start;
@@ -135,7 +135,7 @@ span.text-title-2 {
     height: 2px;
     width: 16%;
     text-align: left;
-}
+} */
 
 span.box-subtitle-title-2 p {
     display: block;
