--- a/section-after-banner.css
+++ b/section-after-banner.css
@@ -6,7 +6,7 @@
 }
 
 .cont-section-inner-collection {
-    box-sizing:border-box;
+    box-sizing: border-box;
     display: flex;
     flex-wrap: wrap;
     font-weight: 300;
@@ -31,7 +31,7 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        
+
     }
 
     .collection-inner-block-end {
@@ -45,6 +45,7 @@
         flex-basis: 50%;
         max-width: 50%;
     }
+
     .collection-inner-block {
         display: flex;
         padding: 0 15px;
@@ -85,7 +86,7 @@
     margin: 0 -15px;
 }
 
-.icon-red-small img {
+.icon-small img {
     height: 70px;
     width: 70px;
 }
